--- a/.github/workflows/SortManagerTests.yaml
+++ b/.github/workflows/SortManagerTests.yaml
@@ -20,5 +20,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Install NUnit.ConsoleRunner
+      run: nuget install NUnit.ConsoleRunner -Version 3.13.0 -DirectDownload -OutputDirectory .
+    - name: Run UnitTests
+      run: ./NUnit.ConsoleRunner.3.13.0/tools/nunit3-console.exe .\SortManagerTests\bin\Debug\net6.0\SortManagerTests.dll
