--- a/.github/workflows/SortManagerTests.yaml
+++ b/.github/workflows/SortManagerTests.yaml
@@ -23,4 +23,4 @@ jobs:
     - name: Install NUnit.ConsoleRunner
       run: nuget install NUnit.ConsoleRunner -Version 3.13.0 -DirectDownload -OutputDirectory .
     - name: Run UnitTests
-      run: ./NUnit.ConsoleRunner.3.13.0/tools/nunit3-console.exe .\SortManagerTests\bin\Debug\net6.0\SortManagerTests.dll
+      run: ./NUnit.ConsoleRunner.3.13.0/tools/nunit3-console.exe .\bin\Debug\net6.0\SortManagerTests.dll
