--- a/.github/workflows/SortManagerTests.yaml
+++ b/.github/workflows/SortManagerTests.yaml
@@ -1,6 +1,7 @@
-name: Run Test Suite 
+name: Unit Testing
 
-on: push
+on: 
+  push
 
 defaults:
   run:
@@ -12,6 +13,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+    - run: npm ci
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
@@ -23,4 +25,4 @@ jobs:
     - name: Install NUnit.ConsoleRunner
       run: nuget install NUnit.ConsoleRunner -Version 3.15.2 -DirectDownload -OutputDirectory .
     - name: Run UnitTests
-      run: ./NUnit.ConsoleRunner.3.15.2/tools/nunit3-console.exe .\bin\Debug\net6.0\SortManagerTests.dll
+      run: dotnet test --logger:"console;verbosity=normal"
