--- a/SortManager/SortManagerView/SortManagerView.csproj
+++ b/SortManager/SortManagerView/SortManagerView.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SortManagerModel\SortManagerModel.csproj" />
+    <ProjectReference Include="..\SortManagerApp\SortManagerController.csproj" />
   </ItemGroup>
 
 </Project>
