--- a/.github/workflows/SortManagerTests.yaml
+++ b/.github/workflows/SortManagerTests.yaml
@@ -5,7 +5,7 @@ on:
 
 defaults:
   run:
-    working-directory: ./SortManager/SortManagerTests
+    working-directory: ./SortManager/
 
 jobs:
   tests:
@@ -21,7 +21,10 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Install NUnit.ConsoleRunner
-      run: nuget install NUnit.ConsoleRunner -Version 3.15.2 -DirectDownload -OutputDirectory .
     - name: Run UnitTests
-      run: dotnet test --logger:"console;verbosity=normal"
+      run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=lcov /p:CoverletOutput=lcov.info
+    - name: coveralls      
+      uses: coverallsapp/github-action@v1.1.1
+      with:
+      github-token: ${{secrets.GITHUB_TOKEN }} 
+      path-to-lcov: SafariParkTests/lcov.info
