--- a/.github/workflows/SortManagerTests.yaml
+++ b/.github/workflows/SortManagerTests.yaml
@@ -21,10 +21,12 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Install NUnit.ConsoleRunner
+      run: nuget install NUnit.ConsoleRunner -Version 3.15.2 -DirectDownload -OutputDirectory .
     - name: Run UnitTests
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=lcov /p:CoverletOutput=lcov.info
     - name: coveralls      
       uses: coverallsapp/github-action@v1.1.1
       with:
         github-token: ${{secrets.GITHUB_TOKEN }} 
-        path-to-lcov: SortManagerTests/lcov.info
+        path-to-lcov: ./SortManager/SortManagerTests/lcov.info
